--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.github.filipelipan.popularmovies"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -42,6 +42,9 @@ dependencies {
 
     //picasso http://square.github.io/picasso/
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    //https://github.com/square/otto
+    compile 'com.squareup:otto:1.3.8'
 
     //butterknife https://github.com/JakeWharton/butterknife
     compile 'com.jakewharton:butterknife:8.4.0'
